@@ -1,3 +1,5 @@
+* add menu to show/hide units (Gansito)
+
 * lobby game table doesn't loose selection when games are added/removed or updated (sgb)
 
 * better route finding logic (sgb)
